--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="0px"
+        android:layout_weight="3"
         android:id="@+id/layoutSuperior">
 
         <ImageView
@@ -23,7 +23,8 @@
             app:srcCompat="@drawable/ic_photo_camera_black_48dp"
             android:id="@+id/imageView"
             android:layout_weight="1"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/imagen_camara"/>
 
         <ImageView
             android:layout_width="match_parent"
@@ -31,14 +32,15 @@
             app:srcCompat="@drawable/ic_videocam_black_48dp"
             android:id="@+id/imageView2"
             android:layout_weight="1"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/imagen_video"/>
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="0px"
+        android:layout_weight="3"
         android:id="@+id/layoutInferior">
 
         <ImageView
@@ -47,7 +49,8 @@
             app:srcCompat="@drawable/ic_photo_library_black_48dp"
             android:id="@+id/imageView3"
             android:layout_weight="1"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/imagen_galeria_fotos"/>
 
         <ImageView
             android:layout_width="match_parent"
@@ -55,6 +58,7 @@
             app:srcCompat="@drawable/ic_video_library_black_48dp"
             android:id="@+id/imageView4"
             android:layout_weight="1"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/imagen_galeria_videos"/>
     </LinearLayout>
 </LinearLayout>
